# gif_test

./: .clang-tidy  .gitignore  CMakeLists.txt  MyLSan.supp  README.md  suppressions.txt  vcpkg.json
code/: SDL_wrapper.cpp  SDL_wrapper.h  cvar.cpp  cvar.h  debug_tools.cpp  debug_tools.h  gl_wrapper.cpp  gl_wrapper.h  global.cpp  global.h  json_wrapper.cpp  json_wrapper.h  main.cpp  mini_tools.h  openal_wrapper.cpp  openal_wrapper.h  win32_crashrpt.cpp  win32_crashrpt.h
code/opengles2/: SDL_gles2funcs.h
code/stb/: stb_image.h
code/tests/: test_json.cpp
code/wai/: whereami.c  whereami.h
